--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
-    "cross-env": "^5.2.0",
     "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
@@ -50,6 +50,8 @@
     "postcss-loader": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.12",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
