服务端全部行程

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "connected-react-router": "^6.0.0",
+    "history": "^4.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
@@ -47,7 +50,6 @@
     "isomorphic-style-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
-    "postcss-loader": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.12",
     "redux-logger": "^3.0.6",
