--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,3 @@
 {
-    "presets": [
-        "env",
-        "react"
-    ],
-    "plugins": [
-        [
-            "transform-runtime",
-            {
-                "corejs": false,
-                "helpers": true,
-                "regenerator": true,
-                "useESModules": true
-            }
-        ],
-        "react-hot-loader/babel"
-    ]
+  "presets": ["react", "latest", "stage-0"]
 }
