--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-  "name": "react_router_4",
+  "name": "webpack-demo1",
   "version": "1.0.0",
-  "description": "react-router 4 new version test application",
-  "main": "no",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "babel-node src/setup-dev-server.js",
-    "start": "cross-env NODE_ENV=production babel-node src/server.js",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hotOnly --progress --config ./config/webpack.config.dev.js ",
+    "build": "cross-env NODE_ENV=production webpack --progress -p --config ./config/webpack.config.prod.js",
+    "server": "cross-env NODE_ENV=production nodemon ./server/index.js --watch config --watch server",
+    "dev:server": "npm run build && npm run server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@git.coding.net:wanghes/react_router_4.git"
-  },
-  "keywords": [
-    "react-ssr",
-    "react-ssr-4"
-  ],
-  "author": "wanghes",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^0.18.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-remove-webpack": "^1.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^1.0.0",
-    "cross-env": "^5.2.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
-    "express": "^4.16.4",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "isomorphic-style-loader": "^4.0.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
-    "postcss-loader": "^3.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.3.0",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "node-sass": "^4.7.2",
+    "nodemon": "^1.12.5",
+    "npm-run-all": "^4.1.2",
+    "postcss-loader": "^2.0.9",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-manifest-plugin": "^1.3.2"
+  },
+  "dependencies": {
+    "history": "^4.7.2",
+    "koa": "^2.4.1",
+    "koa-static-cache": "^5.1.1",
+    "koa2-cors": "^2.0.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.12",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.4"
+    "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.6",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
