--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules
-.idea
-dist
+
+# dependencies
+/node_modules
+
+# production
+/dist
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
