--- a/package.json
+++ b/package.json
@@ -1,64 +1,68 @@
 {
-  "name": "react_router_4",
+  "name": "react-ssr",
   "version": "1.0.0",
-  "description": "react-router 4 new version test application",
-  "main": "no",
+  "description": "A react ssr demo",
+  "author": "mcx",
+  "main": "index.js",
   "scripts": {
-    "dev": "babel-node src/setup-dev-server.js",
-    "start": "cross-env NODE_ENV=production babel-node src/server.js",
+    "dev": "node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js",
     "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@git.coding.net:wanghes/react_router_4.git"
-  },
-  "keywords": [
-    "react-ssr",
-    "react-ssr-4"
-  ],
-  "author": "wanghes",
-  "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@loadable/component": "^5.1.2",
+    "@loadable/server": "^5.1.3",
     "axios": "^0.18.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
+    "babel-loader": "^8.0.4",
+    "express": "^4.16.3",
+    "jsonp": "^0.2.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^1.0.0",
+    "@loadable/babel-plugin": "^5.0.1",
+    "@loadable/webpack-plugin": "^5.0.2",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-helmet": "^5.0.7",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/webpack-env": "^1.13.6",
+    "autoprefixer": "^9.1.5",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "cross-env": "^5.2.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
-    "express": "^4.16.4",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "isomorphic-style-loader": "^4.0.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.10",
+    "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.12",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
+    "style-loader": "^0.23.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.4"
+    "webpack-hot-middleware": "^2.23.1",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
   }
 }
